--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-    window.location.replace("./game/crazycattle3d/");
+    window.location.replace("/345678/game/crazycattle3d/");
 </script>
